# cmake_sample

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: add.cpp  add.h  main.cpp
